--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- 사용자css -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- 오픈그래픽 기본 정보 -->
+    <meta property="og:title" content="앤드게임-영화정보">
+    <meta property="og:image" content="title.jpg">
+    <meta property="og:description" content="10월 22일 과제">
+
 </head>
 
 <body>
